# tgp-ceres

./: CMakeLists.txt  LICENSE  README.md  main.cc  package-lock.json  package.json  tsconfig.json  webpack.config.js
include/: eigen_alias.h  face.h  line.h  point.h  polyhedron.h  problem.h
src/: face.cc  line.cc  main.cc  point.cc  polyhedron.cc
visualize/: data.ts  index.ts  visualizer.ts
